<resources>
    <string name="app_name">Fun with Flags</string>
    <string name="border">Bordure</string>
    <string name="border_details">In heraldry, a bordure is a band of contrasting tincture forming a border around the edge of a shield, traditionally one-sixth as wide as the shield itself. It is sometimes reckoned as an ordinary and sometimes as a subordinary.</string>
    <string name="canton">Canton</string>
    <string name="canton_details">The canton of a flag is the top inner corner of a flag. It is a common location for another flag to be copied in miniature. For instance, the flags of Australia and New Zealand have the Union Jack as their canton.</string>
    <string name="chevron">Chevron</string>
    <string name="chevron_details">A chevron (also spelled cheveron, especially in older documents) is an inverted V-shaped pattern. The word is usually used in reference to a kind of fret in architecture, or to a badge or insignia used in military or police uniforms to indicate rank or length of service, or in heraldry and the designs of flags.</string>
    <string name="fess">Fess</string>
    <string name="fess_details">In heraldry, a fess or fesse is a charge on a coat of arms that takes the form of a band running horizontally across the centre of the shield. Writers disagree in how much of the shield\'s surface is to be covered by a fess or other ordinary, ranging from one-fifth to one-third.</string>
    <string name="greek_cross">Greek Cross</string>
    <string name="greek_cross_details">The term Greek cross designates a cross with arms of equal length, as in a plus sign, while the term Latin cross designates a cross with an elongated descending arm. Numerous other variants have been developed during the medieval period.</string>
    <string name="nordic_cross">Nordic Cross</string>
    <string name="nordic_cross_details">The term Nordic Cross flag describes certain flags bearing the design of the so-called Nordic or Scandinavian cross, a cross symbol in a rectangular field, with the center of the cross shifted towards the hoist.All of the Nordic countries except Greenland have adopted such flags in the modern period, and while the Scandinavian cross is named for its use in the national flags of the Scandinavian nations, the term is used universally by vexillologists, in reference not only to the flags of the Nordic countries.</string>
    <string name="pale">Pale</string>
    <string name="pale_details">A pale is a term used in heraldic blazon and vexillology to describe a charge on a coat of arms (or flag), that takes the form of a band running vertically down the center of the shield. Writers broadly agree that the width of the pale ranges from about one-fifth to about one-third of the width of the shield, but this width is not fixed.</string>
    <string name="pall">Pall</string>
    <string name="pall_details">A pall (or pairle) is a Y-shaped heraldic charge, normally having its arms in the three corners of the shield. An example of a pall placed horizontally (fesswise) is the green portion of the Flag of South Africa.A pall that stops short of the shield\'s edges and that has pointed ends to its three limbs is called a shakefork, although some heraldic sources do not make a distinction between a pall and a shakefork. A pall standing upside down is named pall reversed.</string>
    <string name="quadrisection">Quadrisection</string>
    <string name="quadrisection_details">One fourth of something.The Flag of the Republic consists thus of a divided rectangle of four quarters: the upper field close to the pole white with a blue star of five points; the upper field further from the pole, red; the lower field near the pole, blue; and the lower one further from the pole, white with a red star of five points.</string>
    <string name="saltire">Saltire</string>
    <string name="saltire_details">A saltire is a heraldic symbol in the form of a diagonal cross, like the shape of the letter X in Roman type. The word comes from the Middle French sautoir (\"stirrup\"), possibly owing to the shape of the triangular areas in the design.</string>
    <string name="symmetric_cross">Symmetric Cross</string>
    <string name="symmetric_cross_details">The Georgian national flag is a white rectangle, with in its central portion a large red cross touching all four sides of the flag. In the four corners there are four bolnur-katskhuri crosses of the same color (as the large cross).</string>
    <string name="flag_of_the_week">Flag of the Week</string>
    <string name="fwag_no_fwag">Fwag or NoT a Fwag</string>
    <string name="vexillophile">Vexillophile</string>
    <string name="albania">Albania</string>
    <string name="flag">Flag</string>
    <string name="bend_sinister">Bend Sinister</string>
    <string name="bend_sinister_details">In heraldry, a bend is a band or strap running from the upper dexter (the bearer\'s right side and the viewer\'s left) corner of the shield to the lower sinister (the bearer\'s left side, and the viewer\'s right).The usual bend is occasionally called a bend dexter when it needs to contrast with the bend sinister, which runs in the other direction, like a sash worn diagonally from the left shoulder (Latin sinister means left).</string>
    <string name="score">Score</string>
    <string name="score_reset">0</string>
    <string name="flag_reset">1</string>
    <string name="fun_fact">Fun Fact</string>
    <string name="fwag">Fwag!</string>
    <string name="not_a_fwag">Not a fwag!</string>
    <string name="fun_fact_details">An incorrect version of the flag still commonly used by Albanians and officials, most notably used in 100th Anniversary of the Independence of Albania</string>
    <string name="albania_details">The Flag of Albania is a red flag with a silhouetted black double-headed eagle in the center. The red stands for bravery, strength and valor, while the double-headed eagle represents the sovereign state of Albania located in the Balkans.</string>
</resources>
