<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="in.nimishs.funwithflags.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/android_flag" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:textSize="14sp">

        <Button
            style="@style/homeScreenButtons"
            android:onClick="displayFlagOfTheWeek"
            android:text="@string/flag_of_the_week" />

        <Button
            style="@style/homeScreenButtons"
            android:onClick="playFwagOrNotAFwag"
            android:text="@string/fwag_no_fwag" />

        <Button
            style="@style/homeScreenButtons"
            android:onClick="learnVexillophile"
            android:text="@string/vexillophile" />

    </LinearLayout>


</LinearLayout>
